# puma

./: .gitignore  CMakeLists.txt  conanfile.py  obfuscate.sh
apps/: CMakeLists.txt  app_camera.cc  app_log.cc  nonLockBuffer.h
puma/: CMakeLists.txt
puma/common/: CMakeLists.txt  common.cpp  common.h  device.h  semaphore.h  threadsafe-queue.h  timer.h
puma/driver/: CMakeLists.txt
puma/driver/camera/: CMakeLists.txt  camera_driver.h  camera_dshow.cpp  camera_dshow.h  camera_factory.cpp  camera_factory.h  camera_mac.h  camera_mac.mm  camera_utils.h  camera_uvc.cpp  camera_uvc.h  camera_v4l2.cpp  camera_v4l2.h
puma/driver/camera/ocv_dshow/: CMakeLists.txt  cap_dshow.cpp  cap_dshow.hpp  compile.sh
puma/driver/hid_driver/: CMakeLists.txt  hid_driver.h  hid_factory.cpp  hid_factory.h  hid_utils.h  hidapi_driver.cpp  hidapi_driver.h  hidraw_driver.cpp  hidraw_driver.h
puma/driver/hidapi/: CMakeLists.txt
puma/driver/hidapi/android/: hid.c
puma/driver/hidapi/include/: hidapi.h
puma/driver/hidapi/macos/: hid.c
puma/driver/hidapi/windows/: hid.c
puma/dummy_interface/: CMakeLists.txt  dummy_rgb_interface.cpp  dummy_sensor_interface.cpp  nr_plugin_interface.h
puma/interface/: CMakeLists.txt  README.md
puma/interface/channel/: nr_plugin_ambient_light.h  nr_plugin_ambient_light_types.h  nr_plugin_android_xr.h  nr_plugin_android_xr_types.h  nr_plugin_glasses.h  nr_plugin_glasses_config.h  nr_plugin_glasses_ext.h  nr_plugin_glasses_ext_types.h  nr_plugin_glasses_types.h  nr_plugin_grayscale_camera.h  nr_plugin_grayscale_camera_types.h  nr_plugin_imu.h  nr_plugin_imu_types.h  nr_plugin_rgb_camera.h  nr_plugin_rgb_camera_media.h  nr_plugin_rgb_camera_media_types.h  nr_plugin_rgb_camera_types.h  nr_plugin_streaming.h  nr_plugin_vsync.h  nr_plugin_vsync_types.h
puma/interface/common/: nr_plugin_device_message.h  nr_plugin_generic.h  nr_plugin_hmd.h  nr_plugin_message.h  nr_plugin_result.inl  nr_plugin_types.inl  nr_plugin_types_ext.inl
puma/interface/misc/: nr_plugin_misc.h
puma/interface/public/: nr_plugin_lifecycle.h  nr_plugin_types.h
puma/interface/puma/: nr_plugin_puma.h
puma/provider/: CMakeLists.txt  base_plugin.h  grayscale_camera_plugin.cc  grayscale_camera_plugin.h  imu_plugin.h
puma/source/: CMakeLists.txt  log.h  plugin_puma.cc
puma/util/: CMakeLists.txt  log.h  types.h  util.cc  util.h
tests/: CMakeLists.txt  test_puma.cc
