set(TARGET_NAME common)

set(INCLUDE_DIRS
	"${TARGET_INCLUDE_PATH}"
	"${PROJECT_BINARY_DIR}"
	"${PROJECT_SOURCE_DIR}"
	)

file( GLOB COMMON_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.cc" "${CMAKE_CURRENT_SOURCE_DIR}/*.h.in")
add_library( ${TARGET_NAME} OBJECT ${COMMON_SRC})
target_link_libraries(${TARGET_NAME} PUBLIC ${GENERIC_HID_DEPEND_LIBS} util)
target_include_directories( ${TARGET_NAME} 
	PUBLIC 
	"$<BUILD_INTERFACE:${INCLUDE_DIRS}>" )

PROJECT_INSTALL(${TARGET_NAME} ${TARGETS_EXPORT_NAME})