add_subdirectory(hidapi)
add_subdirectory(camera)
add_subdirectory(hid_driver)

set(GENERIC_CAM_DEPEND_LIBS ${GENERIC_CAM_DEPEND_LIBS} PARENT_SCOPE)
set(GENERIC_HID_DEPEND_LIBS ${GENERIC_HID_DEPEND_LIBS} PARENT_SCOPE)

message(STATUS "puma 2 GENERIC_HID_DEPEND_LIBS: ${GENERIC_HID_DEPEND_LIBS} GENERIC_CAM_DEPEND_LIBS: ${GENERIC_CAM_DEPEND_LIBS}")


