set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-function")
set(INCLUDE_DIRS
	"${TARGET_INCLUDE_PATH}"
	"${PROJECT_BINARY_DIR}"
	"${PROJECT_SOURCE_DIR}"
	"${EXTERNAL_INCLUDE_DIR}"
	)

set(SENSOR_LIBNAME nr_puma)

set(SENSOR_SRC
	dummy_sensor_interface.cpp
)

set(DEPEND_LIBS)
set(INTERFACE_SHARED_OBJ_NAME interface_shared_obj )
add_library( ${INTERFACE_SHARED_OBJ_NAME} OBJECT )
target_sources( ${INTERFACE_SHARED_OBJ_NAME} PRIVATE ${SENSOR_SRC} )
target_include_directories( ${INTERFACE_SHARED_OBJ_NAME} PUBLIC "$<BUILD_INTERFACE:${INCLUDE_DIRS}>" )
target_compile_definitions(${INTERFACE_SHARED_OBJ_NAME} PUBLIC ${EXPORT_BASENAME}_SHARED_LIBS)

set(INTERFACE_STATIC_OBJ_NAME interface_static_obj)
add_library( ${INTERFACE_STATIC_OBJ_NAME} OBJECT )
target_sources( ${INTERFACE_STATIC_OBJ_NAME} PRIVATE ${SENSOR_SRC} )
target_include_directories( ${INTERFACE_STATIC_OBJ_NAME} PUBLIC "$<BUILD_INTERFACE:${INCLUDE_DIRS}>" )

ADD_PLUGIN_LIBRARIES(${SENSOR_LIBNAME} ${INTERFACE_SHARED_OBJ_NAME} ${INTERFACE_STATIC_OBJ_NAME} ${DEPEND_LIBS})

add_definitions(-DRGB_SHARED_LIBS)
set(RGB_LIBNAME nr_rgb_camera)
set(RGB_LIBNAME_ALL_SYMBOLS nr_rgb_camera_all_symbols)
set(RGB_SRC dummy_rgb_interface.cpp)
		
add_library( ${RGB_LIBNAME} SHARED)
target_sources( ${RGB_LIBNAME} PRIVATE ${RGB_SRC} )

add_library( ${RGB_LIBNAME_ALL_SYMBOLS} SHARED)
target_sources( ${RGB_LIBNAME_ALL_SYMBOLS} PRIVATE ${RGB_SRC} )

PROJECT_INSTALL(${RGB_LIBNAME} ${TARGETS_EXPORT_NAME})
PROJECT_INSTALL(${RGB_LIBNAME_ALL_SYMBOLS} ${TARGETS_EXPORT_NAME})
