PROJECT_INIT_TARGET_VARIABLE(provider)
file( GLOB_RECURSE TARGET_HEADER_FILES_EXT "${CMAKE_CURRENT_BINARY_DIR}/*.h" )
file( GLOB_RECURSE TARGET_SOURCE_FILES_EXT "${CMAKE_CURRENT_BINARY_DIR}/*.cc")


add_library( ${TARGET_NAME} STATIC )

target_sources( ${TARGET_NAME}
	PRIVATE
	${TARGET_HEADER_FILES}
	${TARGET_SOURCE_FILES}
	${TARGET_HEADER_FILES_EXT}
	${TARGET_SOURCE_FILES_EXT}
	)

target_include_directories( ${TARGET_NAME}
	PUBLIC	
	"${EXTERNAL_INCLUDE_DIR}"
	"${TARGET_INCLUDE_PATH}"
	"${PROJECT_BINARY_DIR}"
	"${PROJECT_SOURCE_DIR}"
	)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter -Wno-unused-variable")

message(STATUS "puma 3 GENERIC_HID_DEPEND_LIBS: ${GENERIC_HID_DEPEND_LIBS} GENERIC_CAM_DEPEND_LIBS: ${GENERIC_CAM_DEPEND_LIBS}")

target_link_libraries(${TARGET_NAME}
	PUBLIC
	interface
	util
	common
	${GENERIC_HID_DEPEND_LIBS}
	${GENERIC_CAM_DEPEND_LIBS}
	framework::framework
)
